2006-01-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update for 0.2.0.

	* debian/control: Suggest unzip.

	* NEWS: Update for 0.2.0.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Updated British English translation.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Remove check for stdbool.h.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.h: setup_session_info is protected and
	virtual.

	* test/Makefile.am: Distribute test data.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/05file: Filetype checks are now quiet.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* Update documentation.

	* schroot/setup/10mount: Add special cases for file chroots.

	* schroot/setup/05file: New file for unpacking and deleting
	file-based chroots.

	* schroot/sbuild-chroot-file.(cc|h): New file implementing
	file-based chroots.

	* schroot/sbuild-chroot.cc (setup_session_info): Add
	setup_session_info from ChrootLvmSnapshot.

	* schroot/sbuild-chroot-lvm-snapshot.cc: Remove setup_session_info.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-parse-value.cc: New file.  Tests for parse_value.

	* schroot/sbuild-parse-value.h (parse_value): Check failbit rather
	than badbit to catch parse errors.

	* schroot/sbuild-parse-value.cc (parse_value): Correctly parse
	false boolean values.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (run_child): Search for the program to
	run inside the chroot, rather than on the root filesystem.

	* schroot/sbuild-util.cc (find_program_in_path): Add a prefix
	argument, to allow searching in non-root paths, for example inside
	a chroot.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-config.cc (load): Catch and handle exceptions if
	chroot creation fails.

	* schroot/sbuild-chroot.cc (create): Throw an exception if
	creation fails.

2006-01-28  Roger Leigh  <rleigh@debian.org>
